# resume-assistant

./: .env.example  .gitignore  config.json  pyproject.toml  test_pipeline.py
src/: __init__.py  app.py  config.py  exceptions.py  logger.py  secrets.py
src/core/: base.py  document_loader.py  embedding_service.py  rag_chain.py  vector_store.py
src/models/: schemas.py
tests/: test_rag_chain.py
