[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docling>=2.107.0",
    "docling-core>=2.85.0",
    "langchain>=1.3.11",
    "langchain-docling>=2.0.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
]
